adding firebase and match section

--- a/src/Resources/css/app.css
+++ b/src/Resources/css/app.css
@@ -221,7 +221,7 @@ footer .footer_discl {
 ===============================*/
 
 .home_matches_wrapper {
-    background: #98c5e9;
+    background: #bf2222;
     margin-top:9px;
     padding: 50px 0px;
 }
